2005-11-10  Martin Hunt  <hunt@redhat.com>
	* map.c: Doc updates.
	* pmap-gen.c: Change a bunch of generated function names to 
	avoid conflicts with maps with the same key and value types.
	
2005-11-10  Martin Hunt  <hunt@redhat.com>	
	* map.c (_stp_cmp): Use _stp_div64().

2005-11-09  Martin Hunt  <hunt@redhat.com>

	* map.h: Remove HSTAT_LOG and HSTAT_LINEAR.
	* map-gen.c: Fix comment.
	* pmap-gen.c: Ditto.
	
2005-11-09  Martin Hunt  <hunt@redhat.com>	
	* map.c (_stp_cmp): Patch to sort on stats.
	(_stp_map_sort): Ditto.
	(_stp_map_sortn): Ditto.

2005-11-09  Martin Hunt  <hunt@redhat.com>
	* map.c: Change order of includes.
	
2005-11-09  Martin Hunt  <hunt@redhat.com>	
	* map.h (struct map_root): Delete fields
	used by old API.

	* map.c: Remove old map API functions.
	* map-stat.c (_stp_map_add_stat): Delete.
	(_stp_pmap_new_hstat_linear): Move here from map.c.
	(_stp_pmap_new_hstat_log): Ditto.

	* list.c: Deleted.
	* map-keys.c: Deleted.
	* map-values.c: Deleted.
	* map-int.c: Deleted.
	
2005-11-08  Martin Hunt  <hunt@redhat.com>

	* alloc.c (__stp_valloc_percpu): Fix call to vmalloc_node.
	(vmalloc_node): Remove nonworking code.

2005-11-08  Martin Hunt  <hunt@redhat.com>
	
	* map.c (_stp_map_init): New function. Extracted from _stp_map_new()
	so it can be used in _stp_pmap_new().
	(_stp_map_new): Call _stp_map_init().
	(_stp_pmap_new): New function.
	(_stp_pmap_new_hstat_linear): New function.
	(_stp_pmap_new_hstat_log): New function.
	(_stp_pmap_del): New function.
	(_stp_pmap_printn_cpu): New function.
	(_stp_pmap_printn): New function.	
	(_stp_new_agg): New function.
	(_stp_add_agg): New function.	
	(_stp_pmap_agg): New function.		
	(_new_map_clear_node): New function.
	
	* map.h (struct map_root): Add Hist struct. Add copy
	and cmp function pointers for pmaps.

	* stat.h: Remove Stat struct. Replace with Hist struct
	that is limited to only histogram params.
	* map-stat.c: Fix up references to histogram params in map_root.
	* stat-common.c: Ditto.